--- a/cp2.htm
+++ b/cp2.htm
@@ -32,7 +32,7 @@
         <div class="container">
           <a class="accesskey" href="#aU" id="aU" accesskey="U" title="網站標題" tabindex="2">:::</a>
           <h1>
-            <a href="index.htm"><img src="images/logo.svg" alt="台灣藥物法規資訊網" /></a>
+            <a href="index.htm"><img src="images/logo2.svg" alt="藥品成分公告查詢系統" /></a>
           </h1>
 
           <!-- navigation Start -->
@@ -85,23 +85,10 @@
           <nav class="menu" role="navigation" aria-label="Header的導航列">
             <ul>
               <li>
-                <a href="#">藥品</a>
-                <!-- <ul>
-                  <li><a href="#">第二層選單</a></li>
-                  <li><a href="#">第二層選單</a></li>
-                </ul> -->
-              </li>
-              <li>
-                <a href="#">醫療器材</a>
+                <a href="#">系統簡介</a>
               </li>
               <li>
                 <a href="#">綜合查詢</a>
-              </li>
-              <li>
-                <a href="#">電子報訂閱/取消</a>
-              </li>
-              <li>
-                <a href="#">藥品成分公告查詢</a>
               </li>
             </ul>
           </nav>
@@ -122,7 +109,7 @@
         <div class="breadcrumb">
           <ul>
             <li><a href="#">首頁</a></li>
-            <li>藥品</li>
+            <li>系統簡介</li>
           </ul>
         </div>
         <!-- breadcrumb路徑 end-->
@@ -153,8 +140,7 @@
           </div>
           <!-- 主要內容區 -->
           <div class="center_block">
-            <!-- h2節點 -->
-            <h2 class="title">NP標題</h2>
+            <h2 class="title">系統簡介</h2>
             <!-- function_panel -->
             <div class="function_panel">
               <!-- function功能區塊 start-->
@@ -201,51 +187,17 @@
             </div>
             <!-- function_panel -->
 
-            <!-- NP Start -->
-            <!-- 說明區塊 start -->
-            <div class="explain_block">
-              <p>
-                查驗中心於 2006 年成立醫療器材組，主要的業務範圍包括醫療器材相關之技術性資料評估及法規諮詢輔導。而協助食品藥物管理署執行之醫療器材技術性資料評估，包含醫療器材臨床試驗計畫書、臨床試驗報告、查驗登記及相關展延變更，以確保我國民眾使用安全性。
-                此外，針對重要國家型生技計畫，及生技醫藥學研產業之政府補助計畫申請案，進行醫療器材案件有關法規面的評析工作，提供相關部會與申請單位有關醫療器材計畫的法規途徑規劃建議，俾促進國內醫療器材產業發展。
-              </p>
-              <p>
-                <img src="images/pic05.jpg" alt="圖片說明" />
-                查驗中心於 2006 年成立醫療器材組，主要的業務範圍包括醫療器材相關之技術性資料評估及法規諮詢輔導。而協助食品藥物管理署執行之醫療器材技術性資料評估，包含醫療器材臨床試驗計畫書、臨床試驗報告、查驗登記及相關展延變更，以確保我國民眾使用安全性。
-                此外，針對重要國家型生技計畫，及生技醫藥學研產業之政府補助計畫申請案，進行醫療器材案件有關法規面的評析工作，提供相關部會與申請單位有關醫療器材計畫的法規途徑規劃建議，俾促進國內醫療器材產業發展。
-              </p>
-              <img src="images/pic01.jpg" alt="" />
-            </div>
-            <!-- 說明區塊 end -->
-
-            <section class="sub_menu">
-              <ul>
-                <li>
-                  <a href="#"><span class="num">1</span>藥品審查</a>
-                </li>
-                <li>
-                  <a href="#"><span class="num">2</span>細胞治療技術</a>
-                </li>
-                <li>
-                  <a href="#"><span class="num">3</span>醫療器材</a>
-                </li>
-                <li>
-                  <a href="#"><span class="num">4</span>健康食品及特殊營養食品</a>
-                </li>
-                <li>
-                  <a href="#"><span class="num">5</span>醫療科技評估</a>
-                </li>
-                <li>
-                  <a href="#"><span class="num">6</span>諮詢輔導</a>
-                </li>
-                <li>
-                  <a href="#"><span class="num">7</span>國際合作</a>
-                </li>
-                <li>
-                  <a href="#"><span class="num">8</span>中心簡介</a>
-                </li>
-              </ul>
+            <!-- CP Start -->
+            <section class="cp">
+              <div class="explain_block">
+                <p>本資料庫法規公告之收載及搜尋方式以藥品成分名為主要架構，收載之法規公告則以涉及再評估、再分類、統一適應症、 仿單標準化、仿單加刊注意事項警語及各類非處方藥基準等公告之成分為主，若非屬上述各類之公告，請逕行至 衛生福利部食品藥物管理署網站查詢。</p>
+                <ul>
+                  <li>主辦單位：衛生福利部食品藥物管理署</li>
+                  <li>執行單位：財團法人醫藥品查驗中心</li>
+                </ul>
+              </div>
             </section>
-            <!-- NP End -->
+            <!-- CP End -->
           </div>
         </div>
       </div>
