--- a/index.htm
+++ b/index.htm
@@ -138,6 +138,11 @@
             </tr>
             <tr>
               <td></td>
+              <td>系統簡介</td>
+              <td><a href="cp2.htm"></a></td>
+            </tr>
+            <tr>
+              <td></td>
               <td>綜合查詢2</td>
               <td><a href="search2.htm"></a></td>
             </tr>
@@ -145,6 +150,11 @@
               <td></td>
               <td>查詢結果2</td>
               <td><a href="search_detail2.htm"></a></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>電子報訂閱/取消</td>
+              <td><a href="epaper_form.htm"></a></td>
             </tr>
             <!-- <tr>
               <td></td>
