--- a/lp_list.htm
+++ b/lp_list.htm
@@ -122,7 +122,8 @@
         <div class="breadcrumb">
           <ul>
             <li><a href="#">首頁</a></li>
-            <li>藥品</li>
+            <li><a href="#">藥品</a></li>
+            <li>最新法規資訊</li>
           </ul>
         </div>
         <!-- breadcrumb路徑 end-->
