20240223 新增頁面及相關修改

--- a/index.htm
+++ b/index.htm
@@ -108,6 +108,11 @@
           <tbody>
             <tr>
               <td></td>
+              <td>首頁--最新法規資訊</td>
+              <td><a href="mp.htm"></a></td>
+            </tr>
+            <tr>
+              <td></td>
               <td>最新法規資訊</td>
               <td><a href="lp_list.htm"></a></td>
             </tr>
@@ -138,8 +143,8 @@
             </tr>
             <tr>
               <td></td>
-              <td>系統簡介</td>
-              <td><a href="cp2.htm"></a></td>
+              <td>首頁-系統簡介</td>
+              <td><a href="mp2.htm"></a></td>
             </tr>
             <tr>
               <td></td>
@@ -156,7 +161,7 @@
               <td>電子報訂閱/取消</td>
               <td><a href="epaper_form.htm"></a></td>
             </tr>
-            <!-- <tr>
+            <tr>
               <td></td>
               <td>網站地圖</td>
               <td><a href="sitemap.htm"></a></td>
@@ -165,7 +170,7 @@
               <td></td>
               <td>404 網站錯誤</td>
               <td><a href="404.htm"></a></td>
-            </tr> -->
+            </tr>
           </tbody>
         </table>
       </div>
