--- a/sitemap.htm
+++ b/sitemap.htm
@@ -32,7 +32,7 @@
         <div class="container">
           <a class="accesskey" href="#aU" id="aU" accesskey="U" title="網站標題" tabindex="2">:::</a>
           <h1>
-            <a href="index.htm"><img src="images/logo2.svg" alt="藥品成分公告查詢系統" /></a>
+            <a href="index.htm"><img src="images/logo.svg" alt="台灣藥物法規資訊網" /></a>
           </h1>
 
           <!-- navigation Start -->
@@ -85,10 +85,23 @@
           <nav class="menu" role="navigation" aria-label="Header的導航列">
             <ul>
               <li>
-                <a href="#">系統簡介</a>
+                <a href="#">藥品</a>
+                <!-- <ul>
+                  <li><a href="#">第二層選單</a></li>
+                  <li><a href="#">第二層選單</a></li>
+                </ul> -->
+              </li>
+              <li>
+                <a href="#">醫療器材</a>
               </li>
               <li>
                 <a href="#">綜合查詢</a>
+              </li>
+              <li>
+                <a href="#">電子報訂閱/取消</a>
+              </li>
+              <li>
+                <a href="#">藥品成分公告查詢</a>
               </li>
             </ul>
           </nav>
@@ -109,7 +122,7 @@
         <div class="breadcrumb">
           <ul>
             <li><a href="#">首頁</a></li>
-            <li>系統簡介</li>
+            <li>藥品</li>
           </ul>
         </div>
         <!-- breadcrumb路徑 end-->
@@ -140,17 +153,102 @@
           </div>
           <!-- 主要內容區 -->
           <div class="center_block">
-            <h2 class="title">系統簡介</h2>
-
-            <!-- explain_block Start -->
-            <section class="explain_block">
-              <p>本資料庫法規公告之收載及搜尋方式以藥品成分名為主要架構，收載之法規公告則以涉及再評估、再分類、統一適應症、 仿單標準化、仿單加刊注意事項警語及各類非處方藥基準等公告之成分為主，若非屬上述各類之公告，請逕行至 衛生福利部食品藥物管理署網站查詢。</p>
-              <ul>
-                <li>主辦單位：衛生福利部食品藥物管理署</li>
-                <li>執行單位：財團法人醫藥品查驗中心</li>
+            <!-- h2節點 -->
+            <h2 class="title">網站導覽</h2>
+            <!-- function_panel -->
+            <div class="function_panel">
+              <!-- function功能區塊 start-->
+              <div class="function">
+                <ul>
+                  <li class="back"><a href="javascript:history.back()">回上一頁</a></li>
+                  <li class="print"><a href="#">友善列印</a></li>
+                  <li class="forward"><a href="#">轉寄友人</a></li>
+                </ul>
+              </div>
+              <!-- 社群分享 -->
+              <div class="share">
+                <ul>
+                  <li>
+                    <a href="#"><img src="images/basic/icon_facebook.svg" alt="facebook" /></a>
+                  </li>
+                  <li>
+                    <a href="#"><img src="images/basic/icon_twitter.svg" alt="twitter" /></a>
+                  </li>
+                  <li>
+                    <a href="#"><img src="images/basic/icon_line.svg" alt="line" /></a>
+                  </li>
+                  <li>
+                    <a href="#"><img src="images/basic/icon_youtube.svg" alt="youtube" /></a>
+                  </li>
+                  <li>
+                    <a href="#"><img src="images/basic/icon_googleplus.svg" alt="google plus" /></a>
+                  </li>
+                  <li>
+                    <a href="#"><img src="images/basic/icon_instagram.svg" alt="instagram" /></a>
+                  </li>
+                  <li>
+                    <a href="#"><img src="images/basic/icon_linkedin.svg" alt="LinkedIn" /></a>
+                  </li>
+                  <li>
+                    <a href="#"><img src="images/basic/icon_rss.svg" alt="RSS" /></a>
+                  </li>
+                  <li>
+                    <a href="#"><img src="images/basic/icon_plurk.svg" alt="Plurk" /></a>
+                  </li>
+                </ul>
+              </div>
+              <!-- function功能區塊 end-->
+            </div>
+            <!-- function_panel -->
+            <!-- SITEMAP Start -->
+            <section class="sitemap">
+              <p>如果您使用的瀏覽器是IE，快速鍵的使用方式是<kbd>Alt</kbd> 加上所定義的字母；如果您用Firefox 瀏覽網頁，快速鍵的使用方式是 <kbd>Alt</kbd> 加 <kbd>Shift </kbd>加上所定義的字母 ：，本網站的快速鍵﹝Accesskey﹞設定如下：</p>
+              <ul class="accesskeyDefine">
+                <li><kbd>Alt</kbd>+<kbd>U</kbd>上方功能區塊，包括回首頁、網站導覽、網站搜尋、字體選擇、版本選擇等。</li>
+                <li><kbd>Alt</kbd>+<kbd>C</kbd>中央內容區塊，為本頁主要內容區。</li>
+                <li><kbd>Alt</kbd>+<kbd>Z</kbd>下方功能區塊。</li>
+                <li><kbd>Alt</kbd>+<kbd>S</kbd>網站搜尋。</li>
+                <li>如果您的瀏覽器是Firefox，快速鍵的使用方法是 <kbd>Shift</kbd>+<kbd>Alt</kbd>+<kbd>(快速鍵字母)</kbd>，例如 <kbd>Shift</kbd>+<kbd>Alt</kbd>+<kbd>C</kbd>會跳至網頁中央區塊，以此類推。</li>
               </ul>
+              <p>
+                ※當本網站項目頁籤無法以滑鼠點選時，您可利用以下鍵盤操作方式瀏覽資料 <br />
+                <kbd>←</kbd> <kbd>→</kbd> or <kbd>↑</kbd><kbd>↓</kbd>：按左右鍵或上下鍵移動標籤順序。 <br />
+                <kbd>Home</kbd> or <kbd>End</kbd><kbd>→</kbd>：可直接跳至標籤第一項或者最後一項。 <br />
+                <kbd>Tab</kbd>：停留於該標籤後,可利用<kbd>Tab</kbd>鍵跳至內容瀏覽該筆資料，遇到radio按鈕時請配合使用<kbd>←</kbd> <kbd>→</kbd> or <kbd>↑</kbd><kbd>↓</kbd>鍵移動項目順序。 <br />
+                <kbd><kbd>Tab + Shift</kbd></kbd
+                >：按Tab + Shift可往回跳至上一筆資料；當跳回至標籤項目時您可繼續利用<kbd>←</kbd> <kbd>→</kbd> or <kbd>↑</kbd><kbd>↓</kbd>鍵移動標籤順序。
+              </p>
+              <div class="cascading">
+                <ul>
+                  <li>
+                    <a href="#">藥品</a>
+                    <ul>
+                      <li><a href="#">第二層選單</a></li>
+                      <li><a href="#">第二層選單</a></li>
+                      <li><a href="#">第二層選單</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="#">醫療器材</a>
+                    <ul>
+                      <li><a href="#">第二層選單</a></li>
+                      <li><a href="#">第二層選單</a></li>
+                      <li><a href="#">第二層選單</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="#">綜合查詢</a>
+                  </li>
+                  <li>
+                    <a href="#">電子報訂閱/取消</a>
+                  </li>
+                  <li>
+                    <a href="#">藥品成分公告查詢</a>
+                  </li>
+                </ul>
+              </div>
             </section>
-            <!-- explain_block End -->
+            <!-- SITEMAP End -->
           </div>
         </div>
       </div>
