--- a/mp.htm
+++ b/mp.htm
@@ -122,7 +122,7 @@
         <!-- 任何一個section下一層都要包下一層都要包div container作對齊 -->
         <!-- //// class 都可以隨意命名 !!! ///// -->
         <!-- 綜合查詢 -->
-        <section class="mp_searchblock col-12 full">
+        <section class="mp_searchblock">
           <div class="container wow fadeInUp" data-wow-duration="1s" data-wow-delay="0s">
             <div class="col">
               <!-- Search Start -->
