--- a/epaper_form.htm
+++ b/epaper_form.htm
@@ -188,6 +188,18 @@
                 <form action="">
                   <div class="flex-form">
                     <div class="form_grp">
+                      <label for="username" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>種類</label>
+                      <div class="form_content">
+                        <!--最外層的form 或 check_grp class加上form_inline-->
+                        <div class="check_grp form_inline">
+                          <label><input name="" type="checkbox" value="" checked />台灣藥物法規資訊網</label>
+                          <label><input name="" type="checkbox" value="" />當代法規月刊</label>
+                          <label><input name="" type="checkbox" value="" />活動訊息</label>
+                          <label><input name="" type="checkbox" value="" />中心公告</label>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="form_grp">
                       <label for="username" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>電子信箱</label>
                       <div class="form_content">
                         <input type="text" id="username" placeholder="請輸入電子信箱" value="" />
