--- a/mp2.htm
+++ b/mp2.htm
@@ -108,9 +108,24 @@
         <a class="accesskey" href="#ac" id="ac" accesskey="C" title="主要內容區">:::</a>
         <!-- 任何一個section下一層都要包下一層都要包div container作對齊 -->
         <!-- //// class 都可以隨意命名 !!! ///// -->
-        <!-- 裝飾圖 -->
-        <section class="mp_imgblock col-12 full">&nbsp;</section>
-        <!-- 裝飾圖 end-->
+        <!-- 綜合查詢 -->
+        <section class="mp_searchblock">
+          <div class="container wow fadeInUp" data-wow-duration="1s" data-wow-delay="0s">
+            <div class="col">
+              <!-- Search Start -->
+              <div class="search" role="search">
+                <div class="form_grp">
+                  <label for="mustSameAsId">綜合查詢</label>
+                  <input name="username" id="mustSameAsId" type="text" placeholder="請輸入關鍵字" accesskey="S" title="請輸入文字" aria-label="搜尋網站內容" class="txtinput" />
+                  <input name="" type="submit" value="查詢" class="btn btn-search" />
+                  <input name="" type="submit" value="進階查詢" class="btn btn-search" />
+                </div>
+              </div>
+              <!-- Search end -->
+            </div>
+          </div>
+        </section>
+        <!-- 綜合查詢 end-->
 
         <!--  藥品成分公告查詢系統 -->
         <section class="col-12">
