--- a/mp_all.htm
+++ b/mp_all.htm
@@ -290,6 +290,19 @@
         </section>
         <!-- 最新法規資訊 end-->
 
+        <!--  藥品成分公告查詢系統 -->
+        <section class="col-12">
+          <div class="container wow fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
+            <div class="col">
+              <h2 class="c_titleBox">藥品成分公告查詢系統</h2>
+              <div class="searchint">
+                <p>本資料庫法規公告之收載及搜尋方式以藥品成分名為主要架構，收載之法規公告則以涉及再評估、再分類、統一適應症、 仿單標準化、仿單加刊注意事項警語及各類非處方藥基準等公告之成分為主，若非屬上述各類之公告，請逕行至 衛生福利部食品藥物管理署網站查詢。</p>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!--  藥品成分公告查詢系統 end-->
+
         <!--  訂閱電子報 -->
         <section class="col-12 sub_epaperBlock">
           <div class="container">
