--- a/index.htm
+++ b/index.htm
@@ -113,6 +113,11 @@
             </tr>
             <tr>
               <td></td>
+              <td>首頁--通用模組</td>
+              <td><a href="mp_all.htm"></a></td>
+            </tr>
+            <tr>
+              <td></td>
               <td>最新法規資訊</td>
               <td><a href="lp_list.htm"></a></td>
             </tr>
